force-app/main/default/objects/FPSA_Project_Allocation__c/FPSA_Project_Allocation__c.object-meta.xml
<CustomObject>
    <label>Project Allocation</label>
    <nameField>
        <label>Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>