force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Allocation_Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Earned_Value__c</fullName>
    <description>Total earned value for this allocation</description>
    <formula>Total_Earned_Value__c / Total_Time_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total earned value for this allocation</inlineHelpText>
    <label>Allocation Earned Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>