force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <description>Allocation percent of the Project Allocation.</description>
    <label>Allocation Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>