force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Assignment_Number__c</fullName>
    <displayFormat>{000}</displayFormat>
    <externalId>true</externalId>
    <label>Assignment Number</label>
    <type>AutoNumber</type>
</CustomField>