force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Bill_Rate__c</fullName>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>