force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Closed_for_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Closed_for_Time_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed for Time Entry</label>
    <type>Checkbox</type>
</CustomField>