force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Cost_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Cost_Rate_Amount__c</fullName>
    <label>Cost Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>