force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Daily_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Daily_Bill_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Rate is Daily Rate</label>
    <type>Checkbox</type>
</CustomField>