force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Daily_Timecard_Notes_Required__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Daily_Timecard_Notes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Timecard Notes Required</label>
    <type>Checkbox</type>
</CustomField>