force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Description__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>