force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Eligible_for_Utilization__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Eligible_for_Utilization__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Eligible for Utilization</label>
    <type>Checkbox</type>
</CustomField>