force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_End_Date__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>