force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>