force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Lock_Project_Allocation__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Lock_Project_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>do not delete if a time entry is submitted</description>
    <label>FPSA Lock Project Allocation</label>
    <type>Checkbox</type>
</CustomField>