force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Project__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project__c</fullName>
    <description>Reparenting is allowed because we set the Master object through code otherwise code throws error &quot;Field is not writable&quot;</description>
    <label>Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Project Allocations</relationshipLabel>
    <relationshipName>Project_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>