force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Start_Date__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>