force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Projected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Projected_Revenue__c</fullName>
    <label>Projected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>