force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Resource__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reparenting is allowed because we set the Master object through code otherwise code throws error &quot;Field is not writable&quot;</description>
    <label>Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Project Allocations</relationshipLabel>
    <relationshipName>Project_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>