force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Role__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor (Onshore)</fullName>
            </value>
            <value>
                <fullName>Delivery Center Lead (Offshore)</fullName>
            </value>
            <value>
                <fullName>Program Manager PM/BA (Onshore)</fullName>
            </value>
            <value>
                <fullName>BA Lead (Onshore)</fullName>
            </value>
            <value>
                <fullName>BA (Offshore)</fullName>
            </value>
            <value>
                <fullName>Project Manager (Onshore)</fullName>
            </value>
            <value>
                <fullName>Project Manager (Offshore)</fullName>
            </value>
            <value>
                <fullName>Project Architect (Onshore)</fullName>
            </value>
            <value>
                <fullName>Project Architect (Offfshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Technical Lead (Onshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Technical Lead (Offshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Technical Lead  - RPA (Onshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Technical Lead - RPA (Offshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Sales/Service (Onshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Sales/Service (Offshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Industry Cloud (Onshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Industry Cloud (Offshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Commerce (Onshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Commerce  (Offshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - CPQ (Onshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - CPQ (Offshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Experience (Onshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Lead - Experience (Offshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Developer (Onshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Developer (Offshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Developer - RPA (Onshore)</fullName>
            </value>
            <value>
                <fullName>MuleSoft Developer - RPA (Offshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer - Sales/Service (Onshore)</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer - Sales/Service(Offshore)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>