force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Total_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Total_Planned_Hours__c</fullName>
    <label>Total Planned Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>