force-app/main/default/objects/FPSA_Project_Allocation__c/fields/FPSA_Week_100_hrs__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Week_100_hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Week 100</label>
    <precision>7</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>