force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <formula>FPSA_Project__r.FPSA_Is_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable?</label>
    <type>Checkbox</type>
</CustomField>