force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <description>Completed percentage for this allocation</description>
    <formula>( Total_Earned_Value__c /  Total_Estimated_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Completed percentage for this allocation</inlineHelpText>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>