force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Projected_Cost__c.field-meta.xml
<CustomField>
    <fullName>Projected_Cost__c</fullName>
    <formula>FPSA_Total_Planned_Hours__c * FPSA_Cost_Rate_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>