force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Resource_Completed_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Resource_Completed_Hrs__c</fullName>
    <description>Roll Up Summary for task earned hours</description>
    <inlineHelpText>Roll Up Summary for task earned hours</inlineHelpText>
    <label>Resource Completed Hrs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>