force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Account_Name__c</field>
            <operation>equals</operation>
            <value>Caelius Consulting</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account_Name__c</field>
            <operation>equals</operation>
            <value>Test Cls Acct</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Allocations</relationshipLabel>
    <relationshipName>Project_Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>