force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Task_Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Task_Assigned_Hours__c</fullName>
    <description>Sum the task estimated hours for each resources for a project rolled up at resource level</description>
    <inlineHelpText>Sum the issue earned hours for each resources for a project rolled up at resource level</inlineHelpText>
    <label>Task Assigned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>