force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Actual_Margins__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Margins__c</fullName>
    <description>Difference of total actual revenue and total cost</description>
    <formula>Total_Actual_Revenue__c - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference of total actual revenue and total cost</inlineHelpText>
    <label>Total Actual Margins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>