force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Revenue__c</fullName>
    <description>Total of Resource Bill rate per hour from Resource Timeline</description>
    <inlineHelpText>Total of Resource Bill rate per hour from Resource Timeline</inlineHelpText>
    <label>Total Realized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>