force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Hours__c</fullName>
    <description>SUM project planned hours for each resource</description>
    <inlineHelpText>SUM project planned hours for each resource</inlineHelpText>
    <label>Total Allocated Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>