force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Allocated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Margin__c</fullName>
    <formula>Total_Bill_Cost__c - Total_Planned_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Allocated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>