force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Bill_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Cost__c</fullName>
    <formula>FPSA_Bill_Rate__c  * Total_Allocated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocated Bill Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>