force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Total Cost for this allocation</description>
    <inlineHelpText>Total Cost for this allocation</inlineHelpText>
    <label>Total Incurred Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>