force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Value__c</fullName>
    <description>Total Number of earned hours from the Task for this allocation</description>
    <inlineHelpText>Total Number of earned hours from the Task for this allocation</inlineHelpText>
    <label>Total Earned Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>