force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Hours__c</fullName>
    <description>Total Number of estimated hours from Task and Issues for each resource for a project rolled up at resource level.</description>
    <formula>Issue_Assigned_Hours__c +  Task_Assigned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Number of estimated hours from Task and Issues for each resource for a project rolled up at resource level.</inlineHelpText>
    <label>Total Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>