force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced_Amount__c</fullName>
    <label>Total Invoiced Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>