force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Invoiced_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced_Hours__c</fullName>
    <description>Total of hours from Resource Timelines which have invoiced.</description>
    <inlineHelpText>Total of hours from Resource Timelines which have invoiced.</inlineHelpText>
    <label>Total Invoiced Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>