force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Pending_Work__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Work__c</fullName>
    <description>Difference between the total estimated hours and the earned hours</description>
    <formula>Total_Estimated_Hours__c - Total_Earned_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between the total estimated hours and the earned hours</inlineHelpText>
    <label>Total Pending Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>