force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Cost__c</fullName>
    <description>Total of Resource Cost from Resource timelines.</description>
    <inlineHelpText>Total of Resource Cost from Resource timelines.</inlineHelpText>
    <label>Allocated Planned Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>