force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Planned_Margins__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Margins__c</fullName>
    <description>Total planned margins for each resource for a project rolled up at resource level</description>
    <formula>FPSA_Projected_Revenue__c - Projected_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total planned margins for each resource for a project rolled up at resource level</inlineHelpText>
    <label>Projected Margins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>