force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Total_Time_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Submitted__c</fullName>
    <description>Total Time submitted for this allocation</description>
    <inlineHelpText>Total Time submitted for this allocation</inlineHelpText>
    <label>Total Time Submitted</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>