force-app/main/default/objects/FPSA_Project_Allocation__c/fields/Unallocated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Margin__c</fullName>
    <formula>Total_Allocated_Margin__c - Total_Actual_Margins__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unallocated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>